--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,48 @@
     --red-color: #EDC73E;
     --background-color: linear-gradient(to bottom, #181818 0%, #ED2527 50%, #F9F9F9 100%);
 }
+@keyframes spinner {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+}
+@keyframes transition {
+    0% {
+        transform: translateX(-150vw);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+@keyframes loader {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes defilement {
+    0% {
+        transform: translateY(150vw);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+@keyframes size {
+    0% {
+        height: 490px;
+    }
+    100% {
+        height: 670px;
+    }
+}
 @font-face {
     font-family: "j.d";
     font-style: normal;
@@ -109,6 +151,7 @@ nav {
     padding: 1vh 0;
 }
 .naviguation:hover .nav-rapide {
+    animation: loader 300ms ease-in-out;
     height: auto;
     width: auto;
     position: initial;
@@ -140,12 +183,14 @@ main {
     padding-bottom: 4em;
 }
 .titre-activite {
+    animation: transition 300ms both;
     color: var(--tertiaire-color);
     margin: auto;
     font-size: 2em;
     padding: 8vh 0vw 3vh 2vw;
 }
 .activites {
+    animation: defilement 400ms both;
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
@@ -155,7 +200,7 @@ main {
 .article {
     width: 20%;
     min-width: 340px;
-    height: 670px;
+    height: 490px;
     background-color: var(--tertiaire-color);
     padding: 1em;
     display: flex;
@@ -169,6 +214,7 @@ main {
 .article:hover {
     box-shadow: inset 0em 0em 3em 0em var(--red-color);
     opacity: 0.9;
+    animation: size 300ms both;
 }
 .img-activite {
     width: 100%;
@@ -185,11 +231,23 @@ main {
     padding: 3% 7%;
 }
 .description-activite {
+    height: 1px;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    top: -10000px;
+    width: 1px;
+}
+.article:hover .description-activite {
+    animation: transition 400ms both;
     margin: auto;
     padding: 10px 0%;
     height: 190px;
     text-align: justify;
     font-size: 1.1em;
+    position: initial;
+    overflow: initial;
+    width: auto;
 }
 .heure-activite {
     color: var(--primaire-color);
