--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@
 }
 @keyframes transition {
     0% {
-        transform: translateX(-150vw);
+        transform: translate(-150vw);
     }
     100% {
         transform: translateX(0);
@@ -46,6 +46,22 @@
     }
     100% {
         height: 670px;
+    }
+}
+@keyframes nav-box {
+    0% {
+        width: 0;
+        height: 0;
+        opacity: 0;
+    }
+    50% {
+        width: auto;
+        height: auto;
+        opacity: 0;
+    }
+    100% {
+        height: auto;
+        opacity: 1;
     }
 }
 @font-face {
@@ -151,7 +167,7 @@ nav {
     padding: 1vh 0;
 }
 .naviguation:hover .nav-rapide {
-    animation: loader 300ms ease-in-out;
+    animation: loader 400ms ease-in-out;
     height: auto;
     width: auto;
     position: initial;
@@ -239,7 +255,7 @@ main {
     width: 1px;
 }
 .article:hover .description-activite {
-    animation: transition 400ms both;
+    animation: loader 400ms ease-in-out;
     margin: auto;
     padding: 10px 0%;
     height: 190px;
@@ -256,10 +272,16 @@ main {
     margin: 0;
     padding: 4% 0;
 }
+.article:hover .heure-activite {
+    animation: loader 400ms ease-in-out;
+}
 .prix {
     margin: auto;
     padding: 4% 0 1% 0;
     font-size: 1.1em;
+}
+.article:hover .prix {
+    animation: loader 400ms ease-in-out;
 }
 strong {
     color: var(--primaire-color);
@@ -267,6 +289,9 @@ strong {
 .detail-prix {
     margin: 0;
     font-size: 1em;
+}
+.article:hover .detail-prix {
+    animation: loader 400ms ease-in-out;
 }
 footer {
     background-color: var(--tertiaire-color);
