--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
     --secondaire-color: #181818;
     --tertiaire-color:  #F9F9F9;
     --font-color: #000;
-    --red-color: #EDC73E;
+    --quaternaire-color: #EDC73E;
     --background-color: linear-gradient(to bottom, #181818 0%, #ED2527 50%, #F9F9F9 100%);
 }
 @keyframes spinner {
@@ -138,22 +138,22 @@ nav {
 }
 .naviguation:hover {
     background-color: var(--primaire-color);
-    border: 2px solid var(--red-color);
+    border: 2px solid var(--quaternaire-color);
 }
 .page-active {
     background-color: var(--primaire-color);
-    border: 2px solid var(--red-color);
-    color: var(--red-color);
+    border: 2px solid var(--quaternaire-color);
+    color: var(--quaternaire-color);
 }
 .lien-nav {
     text-decoration: none;
     color: var(--tertiaire-color);
 }
 .naviguation:hover .lien-nav {
-    color: var(--red-color);
+    color: var(--quaternaire-color);
 }
 .lien-actif {
-    color: var(--red-color);
+    color: var(--quaternaire-color);
     text-decoration: none;
 }
 .nav-rapide {
@@ -187,7 +187,7 @@ nav {
     max-width: 12vw;
 }
 .lien-rapide:hover {
-    color: var(--red-color);
+    color: var(--quaternaire-color);
 }
 main {
     background: var(--background-color);
@@ -228,7 +228,7 @@ main {
     align-self: center;
 }
 .article:hover {
-    box-shadow: inset 0em 0em 3em 0em var(--red-color);
+    box-shadow: inset 0em 0em 3em 0em var(--quaternaire-color);
     opacity: 0.9;
     animation: size 300ms both;
 }
@@ -316,7 +316,7 @@ footer {
     background-color: transparent;
 }
 .logo-lien-footer:hover {
-    box-shadow: 3px 3px 5px 3px var(--red-color);
+    box-shadow: 3px 3px 5px 3px var(--quaternaire-color);
 }
 .moselle {
     height: 10vh;
@@ -325,7 +325,7 @@ footer {
     background-color: transparent;
 }
 .moselle:hover {
-    box-shadow: 3px 3px 5px 3px var(--red-color);
+    box-shadow: 3px 3px 5px 3px var(--quaternaire-color);
 }
 .liste-contact {
     color: var(--secondaire-color);
