--- a/styles/style.css
+++ b/styles/style.css
@@ -32,8 +32,10 @@
         opacity: 1;
     }
 }
-@keyframes nav-box {
+@keyframes nav-box-desk {
     0% {
+        min-width: 5px;
+        max-width: 5px;
         height: 1px;
         opacity: 0;
     }
@@ -41,8 +43,52 @@
         opacity: 0;
     }
     95% {
+        min-width: 160px;
+        max-width: 160px;
         height: 130px;
-        opacity: 0.4;
+        opacity: 0.1;
+    }
+    100% {
+        height: auto;
+        opacity: 1;
+    }
+}
+@keyframes nav-box-tab {
+    0% {
+        min-width: 5px;
+        max-width: 5px;
+        height: 1px;
+        opacity: 0;
+    }
+    50% {
+        min-width: 120px;
+        max-width: 120px;
+        opacity: 0;
+    }
+    95% {
+        height: 130px;
+        opacity: 0.1;
+    }
+    100% {
+        height: auto;
+        opacity: 1;
+    }
+}
+@keyframes nav-box-port {
+    0% {
+        min-width: 5px;
+        max-width: 5px;
+        height: 1px;
+        opacity: 0;
+    }
+    50% {
+        min-width: 150px;
+        max-width: 150px;
+        opacity: 0;
+    }
+    95% {
+        height: 130px;
+        opacity: 0.1;
     }
     100% {
         height: auto;
@@ -163,7 +209,6 @@ nav {
     cursor: pointer;
     padding: 0.5vh 0;
     z-index: 10;
-
 }
 .naviguation:hover {
     background-color: var(--primaire-color);
@@ -200,9 +245,10 @@ nav {
     padding: 1vh 0;
 }
 .naviguation:hover .nav-rapide {
-    animation: nav-box 450ms ease-in-out;
+    animation: nav-box-desk 450ms ease-in-out;
     height: auto;
-    width: auto;
+    min-width: 160px;
+    max-width: 160px;
     position: initial;
     overflow: visible;
 }
@@ -218,7 +264,6 @@ nav {
     display: block;
     padding: 1vh 0.5vw;
     font-size: 1.15em;
-    max-width: 12vw;
     word-wrap: break-word;
 }
 .lien-rapide:hover {
@@ -250,7 +295,7 @@ nav {
 }
 .sous-nav {
     position: relative;
-    left: 12vw;
+    left: 160px;
     margin: 0;
     padding: 0;
     background-color: var(--primaire-color);
@@ -335,12 +380,12 @@ footer {
 .liens-footer {
     display: flex;
     flex-direction: column;
-    width: 55%;
+    width: 60%;
 }
 .titre-liens-footer {
     font-size: 1.5em;
     color: var(--primaire-color);
-    width: 30%;
+    min-width: 140px;
     text-align: start;
     margin-right: 1vw;
 }
@@ -350,7 +395,7 @@ footer {
     width: 100%;
 }
 .liens-off {
-    height: 15vh;
+    height: 13vh;
     display: flex;
     align-items: center;
 }
@@ -365,7 +410,7 @@ footer {
     cursor: pointer;
 }
 .logo-lien-footer {
-    height: 10vh;
+    height: 9vh;
     border-radius: 10px 0px 10px 0px;
     background-color: transparent;
 }
@@ -374,7 +419,7 @@ footer {
     transform: scale(1.3, 1.3);
 }
 .moselle {
-    height: 10vh;
+    height: 9vh;
     border-radius: 10px 0px 10px 0px;
     border: 1px inset #019838;
     background-color: transparent;
@@ -616,7 +661,6 @@ textarea:focus {
         transform: rotateZ(45deg);
     }
     .naviguation:hover {
-        min-width: 130px;
         background-color: var(--primaire-color);
         border: 2px solid var(--quaternaire-color);
         transform: rotateZ(0);
@@ -652,9 +696,10 @@ textarea:focus {
         padding: 1vh 0;
     }
     .naviguation:hover .nav-rapide {
-        animation: nav-box 450ms ease-in-out;
+        animation: nav-box-tab 450ms ease-in-out;
         height: auto;
-        width: auto;
+        min-width: 120px;
+        max-width: 120px;
         position: initial;
         overflow: visible;
     }
@@ -670,7 +715,6 @@ textarea:focus {
         display: block;
         padding: 1vh 0.5vw;
         font-size: 0.9em;
-        max-width: 12vw;
         word-wrap: break-word;
     }
     .lien-rapide:hover {
@@ -702,7 +746,7 @@ textarea:focus {
     }
     .sous-nav {
         position: relative;
-        left: 125px;
+        left: 120px;
         margin: 0;
         padding: 0;
         background-color: var(--primaire-color);
@@ -733,7 +777,7 @@ textarea:focus {
     .titre-sous-lien {
         text-align: center;
         font-size: 0.9em;
-        padding: 0 2vw;
+        padding: 0 1vw;
         color: var(--quaternaire-color);
     }
     .cadre-sous-nav:hover .titre-sous-lien {
@@ -797,7 +841,7 @@ textarea:focus {
     .titre-liens-footer {
         font-size: 1.1em;
         color: var(--primaire-color);
-        width: 25%;
+        min-width: 100px;
         text-align: start;
         margin-right: 1vw;
     }
@@ -1103,7 +1147,7 @@ textarea:focus {
         padding: 1vh 0;
     }
     .naviguation:hover .nav-rapide {
-        animation: nav-box 450ms ease-in-out;
+        animation: nav-box-port 450ms ease-in-out;
         height: auto;
         width: auto;
         position: initial;
@@ -1121,7 +1165,6 @@ textarea:focus {
         display: block;
         padding: 1vh 0.5vw;
         font-size: 1.15em;
-        max-width: 12vw;
         word-wrap: break-word;
     }
     .lien-rapide:hover {
