--- a/styles/style.css
+++ b/styles/style.css
@@ -395,7 +395,6 @@ footer {
     width: 100%;
 }
 .liens-off {
-    height: 13vh;
     display: flex;
     align-items: center;
 }
@@ -432,7 +431,7 @@ footer {
     color: var(--secondaire-color);
     font-size: 1.2em;
     list-style-type: disclosure-closed;
-    list-style-position: inside;
+    padding: 0;
 }
 .contact {
     padding-bottom: 1vh;
@@ -445,11 +444,7 @@ footer {
     color: var(--primaire-color);
 }
 .icone-contact {
-    padding: 0 0.5em 0 1em;
-    font-size: 1.1em;
-}
-.icone-partenaire {
-    padding: 0 0.5em 0 1em;
+    padding: 0 0.5em;
 }
 .content-modal-contact {
     display: none;
@@ -664,6 +659,7 @@ textarea:focus {
         background-color: var(--primaire-color);
         border: 2px solid var(--quaternaire-color);
         transform: rotateZ(0);
+        margin: auto 1vw;
         transition: all 200ms ease-in;
     }
     .page-active {
@@ -835,7 +831,6 @@ textarea:focus {
         width: 70%;
     }
     .liens-off {
-        height: 11vh;
         display: flex;
         align-items: center;
     }
@@ -884,7 +879,7 @@ textarea:focus {
         color: var(--secondaire-color);
         font-size: 1.1em;
         list-style-type: disclosure-closed;
-        list-style-position: inside;
+        padding: 0;
     }
     .contact {
         padding-bottom: 1vh;
@@ -897,11 +892,7 @@ textarea:focus {
         color: var(--primaire-color);
     }
     .icone-contact {
-        padding: 0 0.5em 0 1em;
-        font-size: 1em;
-    }
-    .icone-partenaire {
-        padding: 0 0.5em 0 1em;
+        padding: 0 0.5em;
     }
     .content-modal-contact {
         display: none;
@@ -1060,19 +1051,18 @@ textarea:focus {
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 42vh;
     }
     .cadre-titre {
         display: flex;
-        justify-content: space-evenly;
+        justify-content: center;
         align-items: center;
         width: 100%;
-        height: 32.5vh;
     }
     .logo-jcf {
-        margin-left: 5vw;
-        height: 71%;
-        width: 10%;
+        height: auto;
+        margin: 0;
+        width: 14%;
+        position: absolute;
     }
     .titre {
         display: flex;
@@ -1080,25 +1070,34 @@ textarea:focus {
         justify-content: center;
         font-family: 'j.d', 'sans-serif';
         width: 50%;
-        font-size: 8vh;
+        font-size: 8vw;
         letter-spacing: 0.3em;
         text-align: center;
         margin: 2vh 0 0 0;
-        line-height: 12vh;
+        line-height: 9vh;
         color: var(--tertiaire-color);
+        z-index: 2;
     }
     .logo-ffjda {
-        margin-right: 3vw;
-        height: 60%;
+        height: auto;
         width: 10%;
+        position: absolute;
+        top: 185px;
+        right: 5px;
+        margin: 0;
     }
     nav {
-        margin: 3vh 0;
-        width: 95%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 4vh;
+        width: 100%;
+        display: none; /* Display: flex*/
+        justify-content: start;
+        align-items: flex-start;
+        flex-direction: column;
+        position: fixed;
+        margin: 10vh 0;
+        z-index: 5;
+        background: var(--secondaire-color);
+        height: auto;
+        padding: 2vh 5vw;
     }
     .naviguation {
         text-decoration: none;
@@ -1111,7 +1110,7 @@ textarea:focus {
         cursor: pointer;
         padding: 0.5vh 0;
         z-index: 10;
-    
+        transform: rotateZ(0);
     }
     .naviguation:hover {
         background-color: var(--primaire-color);
@@ -1276,68 +1275,71 @@ textarea:focus {
         width: 100%;
         display: flex;
         justify-content: space-around;
-        align-items: center;
-        padding: 3vh 0;
+        padding: 5vh 0;
     }
     .liens-footer {
         display: flex;
+        flex-direction: row;
+        width: 70%;
+        justify-content: space-around;
+    }
+    .liens-off {
+        display: flex;
         flex-direction: column;
-        width: 55%;
+        align-items: center;
+        width: 50%;
     }
     .titre-liens-footer {
-        font-size: 1.5em;
+        font-size: 1.1em;
         color: var(--primaire-color);
         width: 30%;
-        text-align: start;
+        text-align: center;
         margin-right: 1vw;
     }
     .img-liens {
         display: flex;
         justify-content: space-around;
+        align-items: center;
+        flex-wrap: wrap;
         width: 100%;
     }
-    .liens-off {
-        height: 15vh;
-        display: flex;
-        align-items: center;
-    }
-    .liens-contact {
-        align-self: center;
-    }
-    .liste-contact {
-        padding: 0;
-    }
     .social {
-        padding: 0 0.5vw;
+        padding: 0.5vh 0.5vw;
         cursor: pointer;
     }
     .logo-lien-footer {
-        height: 10vh;
+        height: 8vh;
         border-radius: 10px 0px 10px 0px;
         background-color: transparent;
     }
     .logo-lien-footer:hover {
         box-shadow: 3px 3px 5px 3px var(--quaternaire-color);
-        transform: scale(1.3, 1.3);
+        transform: scale(1.2, 1.2);
     }
     .moselle {
-        height: 10vh;
+        height: 8vh;
         border-radius: 10px 0px 10px 0px;
         border: 1px inset #019838;
         background-color: transparent;
     }
     .moselle:hover {
         box-shadow: 3px 3px 5px 3px var(--quaternaire-color);
-        transform: scale(1.3, 1.3);
+        transform: scale(1.2, 1.2);
+    }
+    .liens-contact {
+        align-self: center;
+        width: 20%;
+        text-align: right;
     }
     .liste-contact {
         color: var(--secondaire-color);
-        font-size: 1.2em;
+        font-size: 2em;
         list-style-type: disclosure-closed;
-        list-style-position: inside;
+        padding: 0;
+        margin: 0;
     }
     .contact {
-        padding-bottom: 1vh;
+        padding-bottom: 2vh;
     }
     .contact-form {
         text-decoration: none;
@@ -1347,11 +1349,10 @@ textarea:focus {
         color: var(--primaire-color);
     }
     .icone-contact {
-        padding: 0 0.5em 0 1em;
-        font-size: 1.1em;
+        padding: 0 0.5em;
     }
-    .icone-partenaire {
-        padding: 0 0.5em 0 1em;
+    .texte-contact {
+        display: none;
     }
     .content-modal-contact {
         display: none;
